changes and adds everything

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&family=Poppins:wght@300&display=swap"
       rel="stylesheet"
     />
     <title>laurenzjulian</title>
@@ -25,6 +25,7 @@
         <div class="navlink">ABOUT</div>
         <div class="navlink">CONTACTS</div>
       </div>
+      <div class="navline" id="navline"></div>
     </div>
     <!-- home -->
     <div class="home">
@@ -72,6 +73,37 @@
               </path>
             </clipPath>
           </svg>
+          <div class="pitch">"Creating Digital Success"</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- works -->
+
+    <div class="works">
+        <div class="work-list">
+            <div class="work-title" id="lps" onclick="displayShowcase(this.id)">Larry's Plumbing Service</div>
+            <div class="work-title" id="tcs" onclick="displayShowcase(this.id)">Total Court Services</div>
+
+        </div>
+   
+        <div class="showcase-container">
+            <div class="showcase" id="showcase-lps">
+                <img src="./public/works/lps/1.png" alt="1">
+                <img src="./public/works/lps/2.png" alt="2">
+                <img src="./public/works/lps/3.png" alt="3">
+                <img src="./public/works/lps/4.png" alt="4">
+                <img src="./public/works/lps/5.png" alt="5">
+                <img src="./public/works/lps/6.png" alt="6">
+            </div>
+            <div class="showcase" id="showcase-tcs">
+                <img src="./public/works/tcs/1.png" alt="1">
+                <img src="./public/works/tcs/2.png" alt="2">
+                <img src="./public/works/tcs/3.png" alt="3">
+                <img src="./public/works/tcs/4.png" alt="4">
+                <img src="./public/works/tcs/5.png" alt="5">
+                <img src="./public/works/tcs/6.png" alt="6">
+            </div>
         </div>
       </div>
     </div>
