added splitting background and fixed js for works

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
       </div>
     </div>
 
+        <!-- bg-1 -->
+    <div class="bg-1" >
+        <img src="./public/bg-1.jpg" alt="bg" data-scroll data-scroll-speed="0.4">
+    </div>
+
     <!-- works -->
 
     <div class="works">
@@ -107,6 +112,13 @@
         </div>
       </div>
     </div>
+
+        <!-- about -->
+
+        <div class="about">
+            
+        </div>
+
   </body>
 
   <!-- SCRIPT-->
