--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <!-- bg-1 -->
     <div class="bg-1" >
-        <img src="./public/bg-1.jpg" alt="bg" data-scroll data-scroll-speed="0.4">
+        <img src="./public/bg-1.jpg" alt="bg" data-scroll data-scroll-speed="-0.5">
     </div>
 
     <!-- works -->
@@ -116,7 +116,9 @@
         <!-- about -->
 
         <div class="about">
-            
+            <div class="square">
+              <img src="./public/about-image.png" alt="about-image">
+            </div>
         </div>
 
   </body>
