--- a/index.html
+++ b/index.html
@@ -10,117 +10,45 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&family=Poppins:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <title>laurenzjulian</title>
     <link rel="icon" type="image/png" href="./public/LJ.png" />
   </head>
 
-  <!-- HTML -->
   <body>
-    <!-- navbar -->
-    <div class="navbar">
-      <img src="./public/LJ.png" alt="logo" />
-      <div class="navlinks">
-        <div class="navlink">HOME</div>
-        <div class="navlink">WORKS</div>
-        <div class="navlink">ABOUT</div>
-        <div class="navlink">CONTACTS</div>
+    <div class="body-container">
+      <!-- navbar -->
+      <div class="navbar">
+        <img src="./public/LJ.png" alt="logo" />
+        <div class="navlinks">
+          <div class="navlink">HOME</div>
+          <div class="navlink">WORKS</div>
+          <div class="navlink">ABOUT</div>
+        </div>
+
+        <!-- MOBILE navbar -->
+        <input type="checkbox" name="menu" id="toggle" />
+        <label class="menu-bar" for="toggle"
+          ><span class="material-symbols-outlined" style="font-size: 50px">
+            add
+          </span>
+        </label>
+        <div class="menu__section">
+          <div class="navlink">HOME</div>
+          <div class="navlink">WORKS</div>
+          <div class="navlink">ABOUT</div>
+        </div>
+        <div class="background-blur"></div>
       </div>
-      <div class="navline" id="navline"></div>
-    </div>
-    <!-- home -->
-    <div class="home">
-      <div class="home-container">
-        <div class="title-container">
-          <div class="title">laurenz</div>
-          <div class="title">julian</div>
-          <div class="subtitle">freelancer</div>
-        </div>
-        <div class="svg">
-          <svg
-            version="1.1"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 500 500"
-            width="100%"
-            id="blobSvg"
-            style="opacity: 1"
-          >
-            <image
-              x="0"
-              y="0"
-              width="100%"
-              height="100%"
-              clip-path="url(#shape)"
-              href="./public/pic.jpg"
-              preserveAspectRatio="none"
-            ></image>
-            <defs>
-              <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                <stop offset="0%" style="stop-color: rgb(238, 205, 163)"></stop>
-                <stop
-                  offset="100%"
-                  style="stop-color: rgb(239, 98, 159)"
-                ></stop>
-              </linearGradient>
-            </defs>
-            <clipPath id="shape">
-              <path id="blob" fill="url(#gradient)">
-                <animate
-                  attributeName="d"
-                  dur="15000ms"
-                  repeatCount="indefinite"
-                  values="M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,247.5Q24,168,89,125.5Q154,83,219.5,68Q285,53,335.5,94.5Q386,136,424.5,193Q463,250,440.5,320.5Z;M453.78747,319.98894Q416.97789,389.97789,353.96683,436.87838Q290.95577,483.77887,223.95577,447.43366Q156.95577,411.08845,105.64373,365.97789Q54.33169,320.86732,62.67444,252.61056Q71.01719,184.3538,113.01965,135.21007Q155.02211,86.06634,220.52211,66.46683Q286.02211,46.86732,335.5,91.94472Q384.97789,137.02211,437.78747,193.51106Q490.59704,250,453.78747,319.98894Z;M411.39826,313.90633Q402.59677,377.81265,342.92059,407.63957Q283.24442,437.46649,215.13648,432.5428Q147.02853,427.61911,82.23325,380.9572Q17.43796,334.29529,20.45223,250.83809Q23.46649,167.38089,82.5856,115.05707Q141.70471,62.73325,212.19045,63.73015Q282.67618,64.72705,352.67308,84.79839Q422.66998,104.86972,421.43486,177.43486Q420.19974,250,411.39826,313.90633Z;M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,247.5Q24,168,89,125.5Q154,83,219.5,68Q285,53,335.5,94.5Q386,136,424.5,193Q463,250,440.5,320.5Z;"
-                ></animate>
-              </path>
-            </clipPath>
-          </svg>
-          <div class="pitch">"Creating Digital Success"</div>
-        </div>
+
+      <!-- home -->
+      <div class="home">
+        <div class="home__container">Hello.</div>
       </div>
     </div>
-
-        <!-- bg-1 -->
-    <div class="bg-1" >
-        <img src="./public/bg-1.jpg" alt="bg" data-scroll data-scroll-speed="-0.5">
-    </div>
-
-    <!-- works -->
-
-    <div class="works">
-        <div class="work-list">
-            <div class="work-title" id="lps" onclick="displayShowcase(this.id)">Larry's Plumbing Service</div>
-            <div class="work-title" id="tcs" onclick="displayShowcase(this.id)">Total Court Services</div>
-
-        </div>
-   
-        <div class="showcase-container">
-            <div class="showcase" id="showcase-lps">
-                <img src="./public/works/lps/1.png" alt="1">
-                <img src="./public/works/lps/2.png" alt="2">
-                <img src="./public/works/lps/3.png" alt="3">
-                <img src="./public/works/lps/4.png" alt="4">
-                <img src="./public/works/lps/5.png" alt="5">
-                <img src="./public/works/lps/6.png" alt="6">
-            </div>
-            <div class="showcase" id="showcase-tcs">
-                <img src="./public/works/tcs/1.png" alt="1">
-                <img src="./public/works/tcs/2.png" alt="2">
-                <img src="./public/works/tcs/3.png" alt="3">
-                <img src="./public/works/tcs/4.png" alt="4">
-                <img src="./public/works/tcs/5.png" alt="5">
-                <img src="./public/works/tcs/6.png" alt="6">
-            </div>
-        </div>
-      </div>
-    </div>
-
-        <!-- about -->
-
-        <div class="about">
-            <div class="square">
-              <img src="./public/about-image.png" alt="about-image">
-            </div>
-        </div>
-
   </body>
 
   <!-- SCRIPT-->
